Implementing GET /notifications endpoint. Adding GetNotifications function to postgres and dynamo registries. Moving notification status and priority to dto module. Adding integration and unit tests for the new endpoint. Updating mocks.
